--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ packages = [{include = "strava_description_editor"}]
 
 [tool.poetry.dependencies]
 python = "^3.9"
+flask = "^3.0.3"
 
 
 [build-system]
