--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ packages = [{include = "strava_description_editor"}]
 [tool.poetry.dependencies]
 python = "^3.9"
 flask = "^3.0.3"
+requests = "^2.32.3"
 
 
 [build-system]
