--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ packages = [{include = "strava_description_editor"}]
 python = "^3.9"
 flask = "^3.0.3"
 requests = "^2.32.3"
+pytest = "^8.2.2"
 
 
 [build-system]
