--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ requests = "^2.32.3"
 pytest = "^8.2.2"
 flask-sqlalchemy = "^3.1.1"
 flask-admin = "^1.6.1"
+python-dotenv = "^1.0.1"
 
 
 [build-system]
