--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,8 @@ pytest = "^8.2.2"
 flask-sqlalchemy = "^3.1.1"
 flask-admin = "^1.6.1"
 python-dotenv = "^1.0.1"
+flask-session = "^0.8.0"
+redis = "^5.0.8"
 
 
 [build-system]
