--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ flask-session = "^0.8.0"
 redis = "^5.0.8"
 seaborn = "^0.13.2"
 stravavis = "^0.4.0"
+psycopg2-binary = "^2.9.9"
 
 [build-system]
 requires = ["poetry-core"]
