--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,9 @@ seaborn = "^0.13.2"
 stravavis = "^0.4.0"
 psycopg2-binary = "^2.9.9"
 flask-migrate = "^4.0.7"
+fitparse = "^1.2.0"
+ipykernel = "^6.29.5"
+duckdb = "^1.1.3"
 
 [build-system]
 requires = ["poetry-core"]
